syntax = "proto3";

package sqlQuery;

service QueryRunner {
    rpc RunSqlQuery(SqlRunnerRequest) returns (SqlRunnerReply) {}
}

message SqlRunnerRequest {
    string vaultResultPath = 1;
    int64 queryId = 2;
    int32 orgId = 3;
}

message SqlRunnerReply {
    bytes encryptedData = 1;
    bool success = 2;
}
